--- a/themepacks/openvk_modern/stylesheet.css
+++ b/themepacks/openvk_modern/stylesheet.css
@@ -123,7 +123,7 @@ body {
 input[type="text"], input[type="password"], input[type~="text"],
 input[type~="password"], input[type="email"], input[type="phone"],
 input[type~="email"], input[type~="phone"], input[type="search"],
-input[type~="search"], select {
+input[type~="search"], textarea, select {
     border: 1px solid #E5E5E5;
 }
 
