--- a/Web/Presenters/templates/@banned.xml
+++ b/Web/Presenters/templates/@banned.xml
@@ -1,22 +1,20 @@
 {extends "@layout.xml"}
-{block title}Вам бан{/block}
+{block title}{_"banned_title"}{/block}
 
 {block header}
-    Вы были верискокнуты
+    {_"banned_header"}
 {/block}
 
 {block content}
     <center>
-        <img src="/assets/packages/static/openvk/img/oof.apng" alt="Пользователь заблокирован." style="width: 20%;" />
+        <img src="/assets/packages/static/openvk/img/oof.apng" alt="{_'banned_alt'}" style="width: 20%;" />
     </center>
     <p>
-        Извините, <b>{$thisUser->getCanonicalName()}</b>, но вы были верискокнуты.<br/>
-        А причина этому проста: <b>{$thisUser->getBanReason()}</b>. К сожалению, на этот раз
-        нам пришлось заблокировать вас навсегда.
+        {tr("banned_1", htmlentities($thisUser->getCanonicalName()))|noescape}<br/>
+        {tr("banned_2", htmlentities($thisUser->getBanReason()))|noescape}
     </p>
     <hr/>
     <p>
-        Вы всё ещё можете <a href="/support?act=new">написать в службу поддержки</a>, если считаете что произошла ошибка
-        или <a href="/logout">выйти</a>.
+        {tr("banned_3", urlencode($csrfToken))|noescape}
     </p>
 {/block}
