Search: Fix redesign This commit makes the search workable, fixes the length of the search button, translates the placeholder and returns the number of results

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1610,6 +1610,7 @@ body.scrolled .toTop:hover {
     padding: 10px;
     border-top: 1px solid #ebebeb;
     display: flex;
+    margin-bottom: 0;
 }
 
 .header_search_input {
@@ -1638,6 +1639,7 @@ body.scrolled .toTop:hover {
     cursor: pointer;
     text-decoration: none;
     margin-left: 10px;
+    width: 7.5%;
 }
 
 .content_search {
