--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -187,7 +187,7 @@
                           n:foreach="OPENVK_ROOT_CONF['openvk']['preferences']['menu']['links'] as $menuItem"
                           href="{$menuItem['url']}"
                           target="_blank"
-                          class="link">{$menuItem["name"]}</a>
+                          class="link">{strpos($menuItem["name"], "@") === 0 ? tr(substr($menuItem["name"], 1)) : $menuItem["name"]}</a>
                         <div id="_groupListPinnedGroups">
                             <div n:if="$thisUser->getPinnedClubCount() > 0" class="menu_divider"></div>
                             <a
