--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -416,7 +416,7 @@ table {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);;
     padding: 10px;
     float: right;
-    margin-top: 5px;
+    margin-top: 6px;
     margin-left: -6px;
 }
 
@@ -440,7 +440,15 @@ table {
 }
 
 .button:hover {
-	color: #e8e8e8;
+    color: #e8e8e8;
+}
+
+.button-loading {
+    display: inline-block;
+    background-image: url('/assets/packages/static/openvk/img/loading_mini.gif');
+    width: 30px;
+    height: 7px;
+    margin-left: -3px;
 }
 
 input[class=button] {
