Multiple message improvements (#366)
* Сообщения

Сделал такой же цвет в списке у непрочитанного сообщения + убрал скругления ибо зачем они там вообще если нигде их нету лол)

* Сообщения

Исправил баг при котором в списке сообщений была горизонтальная прокрутка

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -889,7 +889,6 @@ table.User {
     display: flex;
     padding: 8px;
     cursor: pointer;
-    width: 611px;
     margin-left: 1px;
     border-bottom: 1px solid #d6d6d6;
 }
@@ -923,10 +922,9 @@ table.User {
 }
 
 .crp-entry--message.unread {
-    background-color: #dcdcdc;
+    background-color: #ededed;
     padding: 5px;
     width: 346px;
-    border-radius: 3px;
 }
 
 .messenger-app--messages---message.unread {
@@ -945,8 +943,6 @@ table.User {
 }
 
 .messenger-app--messages---message.unread:last-of-type {
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
     padding-bottom: 5px;
     margin-bottom: 1.2rem;
 }
