Removed unnecessary extensions from the routes
... almost. restore.pl was left temporarily (namely for two days) so that users could safely restore their passwords if they needed to.

--- a/Email/password-reset.eml.latte
+++ b/Email/password-reset.eml.latte
@@ -94,7 +94,7 @@
                                                                             <tr>
                                                                                 <td>
                                                                                     <center>
-                                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore.pl?act=finish&key={rawurlencode($key)}" align="center" class="float-center">Сбросить пароль!</a>
+                                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={rawurlencode($key)}" align="center" class="float-center">Сбросить пароль!</a>
                                                                                     </center>
                                                                                 </td>
                                                                             </tr>
@@ -118,8 +118,8 @@
                                                             <table class="callout">
                                                                 <tr>
                                                                     <th class="callout-inner primary">
-                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore.pl?act=finish&key={$key}" style="color: #000; text-decoration: none;">
-                                                                            http://{$_SERVER['HTTP_HOST']}/restore.pl?act=finish&key={$key}
+                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}" style="color: #000; text-decoration: none;">
+                                                                            http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}
                                                                         </a>
                                                                     </th>
                                                                 </tr>
