--- a/Web/Presenters/templates/@error.xml
+++ b/Web/Presenters/templates/@error.xml
@@ -1,24 +1,26 @@
+{var instance_name = OPENVK_ROOT_CONF['openvk']['appearance']['name']}
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Произошёл троллинг... | OpenVK</title>
+        <title>An error occurred - {$instance_name}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <style>
             @keyframes gradient {
                 0% {
-                    background-position:0% 50%
+                    background-position: 0% 50%;
                 }
-                
+
                 50% {
-                    background-position:100% 50%
+                    background-position: 100% 50%;
                 }
-                
+
                 100% {
-                    background-position:0% 50%
+                    background-position: 0% 50%;
                 }
             }
-            
+
             body {
                 background: linear-gradient(-30deg, #2b2b2b, #f479ff);
                 color: #fff;
@@ -27,25 +29,25 @@
                 animation: gradient 30s ease-in-out infinite;
                 background-size: 400% 400%;
             }
-            
+
             #error {
                 width: 35rem;
                 max-width: 85vw;
             }
-            
+
             main {
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
                 height: 97vh;
             }
-            
+
             @media screen and (max-width: 768px) {
                 main {
                     flex-direction: column;
                     justify-content: center;
                 }
-                
+
                 main > p:first-of-type {
                     display: none;
                 }
@@ -56,7 +58,7 @@
         <!-- OpenVK ERROR REPORT: -->
         <!-- HTTP {$code}         -->
         <!-- {$msg}               -->
-        
+
         <main>
             <p>{$desc}</p>
             <a href="/"><img src="/assets/packages/static/openvk/img/oof.apng" alt="Ouch" id="error" /></a>
