Global: Fix display of text inputs

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -563,6 +563,7 @@ input[type="text"], input[type="password"], input[type~="text"], input[type~="pa
     font-size: 11px;
     font-family: tahoma, verdana, arial, sans-serif;
     width: 100%;
+    box-sizing: border-box;
 }
 
 h4 {
