Global: Add a date adaptation to the user's timezone
Closes #170

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -17,6 +17,10 @@
         {script "js/l10n.js"}
         {script "js/openvk.cls.js"}
 
+        {if $isTimezoned == null}
+            {script "js/timezone.js"}
+        {/if}
+
         {ifset $thisUser}
             {if $thisUser->getNsfwTolerance() < 2}
                 {css "css/nsfw-posts.css"}
