--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1790,7 +1790,7 @@ body.scrolled .toTop:hover {
 .summaryBar {
   border-bottom: 1px solid #DAE2E8;
   clear: both;
-  padding: 11px 10px 0 10px;
+  padding: 0 10px;
     padding-top: 11px;
   padding-top: 11px;
   color: black;
