--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -11,7 +11,7 @@
             
             {if sizeof($data) > 0}
                 <div class="content" n:foreach="$data as $dat">
-                    <table>
+                    <table cellspacing="0" cellpadding="0">
                         <tbody>
                             <tr>
                                 <td valign="top">
