--- a/Web/Presenters/templates/Report/View.xml
+++ b/Web/Presenters/templates/Report/View.xml
@@ -3,7 +3,7 @@
 {block title}{$report->getReason()}{/block}
 
 {block header}
-    <a href="/admin/reports">{_list_of_reports}</a>
+    <a href="/support/reports">{_list_of_reports}</a>
     »
     {_report_number}{$report->getId()}
 {/block}
@@ -12,7 +12,7 @@
 <p><b>{_comment}: </b>{$report->getReason()}</p>
 {include "../components/post/oldpost.xml", post => $report->getContentObject(), forceNoDeleteLink => TRUE, forceNoShareLink => TRUE, forceNoLike => TRUE}
 <center>
-    <form action="/admin/reportAction{$report->getId()}" method="post">
+    <form action="/support/reportAction{$report->getId()}" method="post">
         <input type="hidden" name="hash" value="{$csrfToken}" />
         <input type="submit" name="ban" value="{_ban_user_action}" class="button">
         <input type="submit" name="delete" value="{_delete}" class="button">
