--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -190,7 +190,11 @@
                                 <img src="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['src']}" alt="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['caption']}" class="psa-poster" style="max-width: 100%; margin-top: 50px;" />
                             </a>
                         {else}
-                            <a href="/support" class="link">{_menu_support}</a>
+                            <a href="/support" class="link">{_menu_support}
+                                {if $ticketAnsweredCount > 0}
+                                    (<b>{$ticketAnsweredCount}</b>)
+                                {/if}
+                            </a>
                             <a href="/logout?hash={urlencode($csrfToken)}" class="link">{_menu_logout}</a>
                         {/if}
                     {else}
