Global: Fix up button Due to the fact that "document.body.scrollTop" was removed from newer browsers, hovering over this button was not displayed. I replaced this with "window.scrollY" which works in newer browsers. I also localized the text on it.

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -93,7 +93,7 @@
         <div class="dimmer"></div>
 
         <div class="toTop">
-            ⬆ Вверх
+            ⬆ {_to_top}
         </div>
 
         <div class="layout">
