[WIP Maybe] Email: Add verification mechanism
This does work only if email is required by instance. If you're sysadmin, you can configure it in openvk.yml.

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1831,3 +1831,13 @@ body.scrolled .toTop:hover {
 .comments_count {
     padding: 5px 0px 0px 0px;
 }
+
+.border-block {
+    box-shadow: inset 0px 0 0px 1px #b6bfca, inset 0px 0 0px 10px #d8dfe7;
+    width: 300px;
+    padding: 20px;
+}
+
+.center {
+    margin: 0 auto;
+}
